--- a/data/tuberapps/yamls/virtualservice.yaml
+++ b/data/tuberapps/yamls/virtualservice.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: '{{.appName}}-ingress'
+  name: {{.appName}}-ingress
 spec:
   hosts:
   - {{"{{.clusterDefaultHost}}"}}
