Update grpc routing

--- a/.tuber/virtualservice.yaml
+++ b/.tuber/virtualservice.yaml
@@ -10,7 +10,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /tuber
+        prefix: /proto.Tuber
     route:
     - destination:
         host: tuber
