Use tuber service account

--- a/.tuber/deployment.yaml
+++ b/.tuber/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: tuber
     spec:
+      serviceAccountName: tuber
       containers:
       - image: {{ .tuberImage }}
         name: tuber
