--- a/data/tuberapps/yamls/service.yaml
+++ b/data/tuberapps/yamls/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.appName}}
+  name: {{"{{.tuberAppName}}"}}
 spec:
   ports:
   - port: 3000
     name: {{.serviceType}}
   selector:
-    app: {{.appName}}
+    app: {{"{{.tuberAppName}}"}}
