--- a/.tuber/admin.yaml
+++ b/.tuber/admin.yaml
@@ -55,7 +55,8 @@ spec:
             - secretRef:
                 name: tuber-env
           command:
-            - "app/tuber"
+            - "/app/tuber"
+          args:
             - "adminserver"
             - "-y"
       volumes:
