whoops def need these

--- a/.tuber/deployment.yaml
+++ b/.tuber/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       serviceAccountName: tuber
       containers:
-      - image: {{ .tuberImage }}
+      - image: "{{ .tuberImage }}"
         name: tuber
         volumeMounts:
           - name: tuber-credentials
