--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -16,12 +16,13 @@
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "apollo": "^2.33.2",
-    "eslint-plugin-react": "^7.23.2",
     "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
     "graphql": "^15.5.0",
     "next": "^10.2.0",
-    "react-dom": "^17.0.2",
     "react": "^17.0.2",
-    "typescript": "^4.2.4"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.2.4",
+    "windicss-webpack-plugin": "^0.5.3"
   }
 }
