--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "generate": "apollo codegen:generate --localSchemaFile=../../../schema.graphql --target=typescript --tagName=gql",
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.18",
-    "@graphql-codegen/cli": "^1.21.4",
+    "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/typescript-urql": "^2.0.6",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
@@ -25,7 +25,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.2.4",
-    "windicss-webpack-plugin": "^0.5.3"
+    "windicss-webpack-plugin": "^0.5.3",
+    "@graphql-codegen/typescript-operations": "1.17.16",
+    "@graphql-codegen/urql-introspection": "1.3.0",
+    "@graphql-codegen/typescript": "1.22.0",
+    "@graphql-codegen/introspection": "1.18.2"
   },
   "dependencies": {
     "urql": "^2.0.3"
