--- a/pkg/adminserver/web/codegen.yml
+++ b/pkg/adminserver/web/codegen.yml
@@ -1,12 +1,9 @@
 overwrite: true
 schema: "../../../schema.graphql"
-documents: "../../../schema.graphql"
+documents: "src/operations/**/*.graphql"
 generates:
   src/generated/graphql.ts:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "urql-introspection"
-  ./graphql.schema.json:
-    plugins:
-      - "introspection"
