30m timeout on tuber deployment

--- a/.tuber/deployment.yaml
+++ b/.tuber/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: tuber
   namespace: tuber
+  annotations:
+    "tuber/rolloutTimeout": 30m
 spec:
   replicas: 1
   selector:
