--- a/gqlgen.yaml
+++ b/gqlgen.yaml
@@ -54,3 +54,8 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+
+  TuberApp:
+    fields:
+      reviewApps:
+        resolver: true
