--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3002",
     "generate": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
