--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -13,19 +13,20 @@
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.22.0",
     "@graphql-codegen/typescript-operations": "1.17.16",
     "@graphql-codegen/typescript-urql": "^2.0.6",
-    "@graphql-codegen/typescript": "1.22.0",
     "@graphql-codegen/urql-introspection": "1.3.0",
+    "@heroicons/react": "^1.0.1",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
-    "eslint-plugin-react": "^7.23.2",
     "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
     "graphql": "^15.5.0",
     "next": "^10.2.0",
-    "react-dom": "^17.0.2",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.2.4",
     "urql": "^2.0.3",
     "windicss-webpack-plugin": "^0.5.3"
