--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3002",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start -p 3002",
     "generate": "graphql-codegen --config codegen.yml"
   },
