fix deployments to work with PVC

--- a/.tuber/virtualservice.yaml
+++ b/.tuber/virtualservice.yaml
@@ -4,10 +4,15 @@ metadata:
   name: tuber
 spec:
   hosts:
-  - "tuber.{{.clusterDefaultHost}}"
+    - "{{.clusterAdminHost}}"
   gateways:
-  - "{{.clusterDefaultGateway}}"
+    - "{{.clusterAdminGateway}}"
   http:
-  - route:
-    - destination:
-        host: tuber
+    - route:
+        - destination:
+            host: tuber
+            port:
+              number: 3000
+      match:
+        - uri:
+            prefix: /tuber
