--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -21,3 +21,13 @@ jobs:
         with:
           go-version: '^1.16'
       - run: go build
+  frontend-build:
+    name: build frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: yarn install
+        working-directory: pkg/adminserver/web
+      - run: yarn build
+        working-directory: pkg/adminserver/web
