--- a/pkg/adminserver/web/package.json
+++ b/pkg/adminserver/web/package.json
@@ -30,5 +30,8 @@
     "typescript": "^4.2.4",
     "urql": "^2.0.3",
     "windicss-webpack-plugin": "^0.6.2"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1"
   }
 }
