--- a/.tuber/virtualservice.yaml
+++ b/.tuber/virtualservice.yaml
@@ -18,7 +18,7 @@ spec:
             prefix: /tuber/graphql
     - route:
         - destination:
-            host: tuber-frontend.tuber-frontend
+            host: tuber-frontend.tuber-frontend.svc.cluster.local
             port:
               number: 3000
       match:
