--- a/pkg/adminserver/web/Dockerfile
+++ b/pkg/adminserver/web/Dockerfile
@@ -18,6 +18,7 @@ FROM node:14-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
+ENV TUBER_PREFIX /tuber
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
