--- a/pkg/adminserver/web/Dockerfile
+++ b/pkg/adminserver/web/Dockerfile
@@ -11,6 +11,10 @@ FROM node:14-alpine AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+
+ENV NODE_ENV production
+ENV TUBER_PREFIX /tuber
+
 RUN yarn build
 
 # Production image, copy all the files and run next
