--- a/pkg/adminserver/web/.tuber/deployment.yaml
+++ b/pkg/adminserver/web/.tuber/deployment.yaml
@@ -2,8 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tuber-frontend
-  namespace: tuber-frontend
-spec:
+jspec:
   replicas: 1
   selector:
     matchLabels:
