--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,6 @@
 steps:
-- id: "pull cache"
-  name: gcr.io/cloud-builders/docker
-  entrypoint: 'bash'
-  waitFor: ['-']
-  args:
-    - '-c'
-    - >-
-      docker pull gcr.io/$PROJECT_ID/tuber:$BRANCH_NAME ||
-      docker pull gcr.io/$PROJECT_ID/tuber:main ||
-      exit 0
-- name: gcr.io/cloud-builders/docker
-  waitFor: ['pull cache']
-  entrypoint: "bash"
-  id: "docker build"
-  args:
-    - "-c"
-    - >-
-      docker build
-      --cache-from gcr.io/$PROJECT_ID/tuber:$BRANCH_NAME
-      --cache-from gcr.io/$PROJECT_ID/tuber:main
-      -t gcr.io/$PROJECT_ID/tuber:$BRANCH_NAME
-      -t gcr.io/$PROJECT_ID/tuber:$COMMIT_SHA
-      .
-images:
-  - gcr.io/$PROJECT_ID/tuber:$BRANCH_NAME
-  - gcr.io/$PROJECT_ID/tuber:$COMMIT_SHA
-timeout: 5800s
-options:
-  machineType: "N1_HIGHCPU_8"
+  - name: 'gcr.io/kaniko-project/executor:latest'
+    args:
+      - --destination=gcr.io/$PROJECT_ID/tuber:$BRANCH_NAME
+      - --destination=gcr.io/$PROJECT_ID/tuber:$COMMIT_SHA
+      - --cache=true
