--- a/pkg/adminserver/web/cloudbuild.yaml
+++ b/pkg/adminserver/web/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
   - name: 'gcr.io/kaniko-project/executor:latest'
     args:
+      - --context=/workspace/pkg/adminserver/web
       - --destination=gcr.io/$PROJECT_ID/tuber-frontend:$BRANCH_NAME
       - --destination=gcr.io/$PROJECT_ID/tuber-frontend:$COMMIT_SHA
       - --cache=true
