--- a/.tuber/service.yaml
+++ b/.tuber/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: tuber
 spec:
   ports:
-  - port: 3000
-    name: grpc
+    - port: 3000
+      name: http
   selector:
     app: tuber
