seriously we werent using kaniko and also master couldnt build this whole time

--- a/.tuber/tuber-bolt.yaml
+++ b/.tuber/tuber-bolt.yaml
@@ -23,7 +23,7 @@ spec:
       serviceAccountName: tuber
       terminationGracePeriodSeconds: 1200
       containers:
-        - image: "{{ .tuberImage }}"
+        - image: "gcr.io/freshly-docker/tuber:main"
           name: tuber-bolt
           command:
             - "/app/tuber"
