--- a/.tuber/bolter.yaml
+++ b/.tuber/bolter.yaml
@@ -2,13 +2,14 @@ apiVersion: apps/v1
 kind: Pod
 metadata:
   name: tuber-bolter
+  namespace: tuber
 spec:
   nodeSelector:
     cloud.google.com/gke-nodepool: "default-pool"
   serviceAccountName: tuber
   terminationGracePeriodSeconds: 1200
   containers:
-    - image: "{{ .tuberImage }}"
+    - image: "gcr.io/freshly-docker/tuber:main"
       name: tuber
       command:
         - "/app/tuber"
