--- a/.tuber/virtualservice.yaml
+++ b/.tuber/virtualservice.yaml
@@ -2,11 +2,12 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: tuber
+  namespace: tuber
 spec:
   hosts:
-    - "{{.clusterAdminHost}}"
+    - production.admin.freshlyservices.net
   gateways:
-    - "{{.clusterAdminGateway}}"
+    - istio-system/iap-gateway
   http:
     - route:
         - destination:
