simplify the heck out of it all by putting the server first

--- a/.tuber/virtualservice.yaml
+++ b/.tuber/virtualservice.yaml
@@ -8,25 +8,11 @@ spec:
   gateways:
     - "{{.clusterAdminGateway}}"
   http:
-    - route:
+    - match:
+        - uri:
+            prefix: /tuber
+      route:
         - destination:
             host: tuber
             port:
               number: 3000
-      match:
-        - uri:
-            prefix: /tuber/graphql
-        - uri:
-            prefix: /tuber/login
-        - uri:
-            prefix: /tuber/auth
-        - uri:
-            prefix: /tuber/unauthorized
-    - route:
-        - destination:
-            host: tuber-frontend.tuber-frontend.svc.cluster.local
-            port:
-              number: 3000
-      match:
-        - uri:
-            prefix: /tuber
